test/org/midica/testfiles/failing/opt-duration-not-float.midica
INCLUDE inc/instruments.midica

0  c  /4  d=0.1.2
